--- a/src/translations/vi.json
+++ b/src/translations/vi.json
@@ -47,7 +47,7 @@
       "manage-doctor": "Quản lý bác sĩ",
       "manage-admin": "Quản lý admin",
       "crud": "CRUD user",
-      "crud-redux": "CRUD redux",
+      "crud-redux": "Tạo thông tin bác sĩ",
       "clinic": "Phòng khám",
       "manage-clinic": "Quản lý phòng khám",
       "specialty": "Chuyên khoa",
